add emoji link on the sidebar

--- a/static/chat.html
+++ b/static/chat.html
@@ -150,6 +150,10 @@
               <groups-list />
             </div>
 
+						<div class="emojislink">
+							<span class="sidebar-subhead" @click.stop.prevent="openEmojisLink()">Emojis</span>
+						</div>
+
             <div class="settings">
               <span class="sidebar-subhead" @click.stop.prevent="toggleSettingsEnabled()">Settings</span>
             </div>
